# RigidBodysim-OpenGL

./: .gitignore  CMakeLists.txt  README.md  build.ps1  build.sh  imgui.ini  resource.aps  resource.h  resource.rc
.cache/clangd/index/: Body.cpp.75471ABC4045862D.idx  Body.h.642DF54D2AC38F6C.idx  Shape.cpp.D8DAD0C147CBD1D7.idx  Shape.h.00AF8D6F31C0E7A5.idx  glad.c.C7955290C8D85947.idx  glad.h.B5C55358EC93F9AC.idx  imconfig.h.D66D466585167035.idx  imgui.cpp.953FFE1D5E0EEC3A.idx  imgui.h.FC1EF0354409158C.idx  imgui_demo.cpp.A39FE4BC882F64F8.idx  imgui_draw.cpp.F9CF3A1561AD1192.idx  imgui_impl_glfw.cpp.571478B9C59708D3.idx  imgui_impl_glfw.h.5281F2A8ABC94823.idx  imgui_impl_opengl3.cpp.D1DDDB285CFBF610.idx  imgui_impl_opengl3.h.222F59E50A766878.idx  imgui_impl_opengl3_loader.h.1AF4007CEAF3F535.idx  imgui_internal.h.D1A0401E4564ABF2.idx  imgui_tables.cpp.BD54898A584023D8.idx  imgui_widgets.cpp.CF04CE4272F27A65.idx  imstb_rectpack.h.CEA28EDE42C72808.idx  imstb_textedit.h.945AFE62F7F9B67F.idx  imstb_truetype.h.970E3A1FBE17124B.idx  main.cpp.8D7A2E8181469BD1.idx  renderer.cpp.676BCB6A903CA5EC.idx  renderer.h.4D5E7EB0393B0D33.idx  stb_image.h.BE7B01F806645BEC.idx
shader/: circle.glsl  shape.glsl  square.glsl  vertexShader.glsl
src/: main.cpp  renderer.cpp  renderer.h
src/Application/: Application.cpp  Application.h  GUI.cpp  GUI.h  Renderer.cpp  Renderer.h  Utils.cpp  Utils.h  main.cpp  renderer.cpp  renderer.h
src/Math/: Vec2.cpp  Vec2.h
src/Physics/: Body.cpp  Body.h  CollisionDetection.cpp  CollisionDetection.h  CollisionSolver.cpp  CollisionSolver.h  Constant.h  Constants.h  ContactInformation.h  Shape.cpp  Shape.h
src/Physics/WreckingBall/: WreckingBall.h
